syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "order-service/pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ListOrdersRequest {
  string user_id = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  google.protobuf.Timestamp created_at = 5;
}
